# ai_agents_orchestration

./: .dockerignore  .env.example  .env.homelab.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.homelab.yml  docker-compose.traefik.basicauth.yml  docker-compose.traefik.http.yml  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/agents/: graph.py  prompts.py  state.py
app/api/: routes.py
app/core/: config.py
app/schemas/: chat.py
app/services/: chroma_client.py  ingestion_service.py  ollama_client.py  retrieval_service.py
app/static/: app.js  index.html  styles.css
app/utils/: text_splitter.py
data/docs/: data_engineering_notes.md  machine_learning_notes.md  mlops_notes.md
tests/: test_agent_graph.py  test_health.py  test_ollama_client.py  test_retrieval_service.py  test_text_splitter.py  test_web_ui.py
