[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-agent"
version = "0.1.0"
description = "Enterprise-style local RAG agent with FastAPI, LangGraph, Ollama, and ChromaDB."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "sentence-transformers>=3.0.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.pytest.ini_options]
pythonpath = ["."]
